--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,47 @@ button.add-blance-btn i {
     border-radius: 10px;
     background: #342375;
 }
+.total-display-option .col-3 div {
+    background: #FF396F;
+    height: 55px;
+    text-align: center;
+    font-size: 25px;
+    padding: 6px 0;
+    border-radius: 10px;
+}
+
+.total-display-option {
+    margin-top: 20px;
+}
+.total-display-option span {
+    font-size: 12px;
+    text-align: center;
+    display: block;
+    margin-top: 10px;
+}
+
+.total-display-option .col-3 {
+    padding-left: 10px;
+}
+.total-display-option .col-3 .send{
+    background-color: #6236FF;
+}
+.total-display-option .col-3 .cards{
+    background-color: #1DCC70;
+}
+
+.total-display-option .col-3 .exch{
+    background-color: #FFB400;
+}
+
+
+
+
+
+
+
+
+
 /* 
 font-family: 'Inter', sans-serif;
 font-family: 'The Nautigal', cursive; 
