--- a/css/style.css
+++ b/css/style.css
@@ -154,8 +154,8 @@ button.add-blance-btn i {
     text-decoration: none;
     margin-right: 5px;
 }
-section.transactions-section {
-    padding: 30px 0;
+section{
+    padding-top: 30px;
 }
 .tarans-item {
     background: #161129;
@@ -230,12 +230,125 @@ card-item h3{
 .card-item.card-3{
     background: #1E1E1E;
 }
+.author {
+    background: #161129;
+    color: #fff;
+    padding: 11px 11px;
+    border-radius: 10px;
+    margin: 10px 4px;
+    text-align: center;
+}
 
+.author img {
+    height: 65px;
+    border-radius: 10px;
+}
+.author span {
+    display: block;
+    padding-top: 3px;
+    font-size: 12px;
+}
+.bill-card {
+    border-radius: 12px;
+    background: #161129;
+    color: #fff;
+    text-align: center;
+    padding: 25px;
+    margin: 15px 5px;
+}
 
+.bill-card ul {
+    list-style: none;
+    padding: 5px 0 15px 0;
+    margin: 0;
+}
+.bill-card img {
+    height: 70px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+}
+.bill-card h2 {
+    margin: 0;
+    padding-top: 10px;
+    font-weight: bold;
+    font-size: 30px;
+}
+.bill-card button {
+    border: navajowhite;
+    background: #6236FF;
+    color: #fff;
+    font-weight: bold;
+    width: 100%;
+    padding: 5px 0;
+    border-radius: 10px;
+}
 
+.prog{
+    background: #161129;
+    color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    margin-top: 10px;
+}
 
+.prog-top {
+    display: flex;
+    justify-content: space-between;
+}
+.prog-top h2 {
+    margin: 0;
+    font-weight: bold;
+}
 
+.prog-top span {
+    color: #9a6cc8;
+    padding: 0px 0 12px 0;
+    display: block;
+}
+.progress-bar {
+    background: #6236FF;
+}
+.progress {
+    background-color: #372648;
+    height: 20px;
+    border-radius: 10px;
+}
+.news-card {
+    background: #161129;
+    color: #fff;
+    padding: 0;
+    overflow: hidden;
+    border-radius: 10px;
+    margin: 10px 5px;
+}
 
+.news-card img {
+    height: 150px;
+    width: 100%;
+}
+
+.news-card p {
+    padding: 10px;
+    font-weight: bold;
+    font-size: 18px;
+}
+footer {
+    background: #161129;
+    color: #fff;
+    text-align: center;
+    padding: 15px 0;
+}
+
+footer p {
+    margin: 0;
+    font-size: 15px;
+}
+
+footer span {
+    color: #906eb2;
+    font-size: 15px;
+}
 /* 
 font-family: 'Inter', sans-serif;
 font-family: 'The Nautigal', cursive; 
