--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body{
     font-family: 'Inter', sans-serif;
     font-weight: 400;
     background-color: #000;
+    overflow-x: hidden;
 }
 nav {
     background: #6236FF;
@@ -60,16 +61,16 @@ nav {
     padding: 25px;
     margin-top: 92px;
 }
-.balance-wrap:before {
+/* .balance-wrap:before {
     content: '';
     position: absolute;
     top: 0;
-    left: -13px;
+    left: -50%;
     height: 50%;
-    width: 107%;
+    width: 200%;
     background: #6236FF;
     z-index: -1;
-}
+} */
 .total-display-blance p {
     margin-bottom: 5px;
 }
@@ -255,6 +256,8 @@ card-item h3{
 .author img {
     height: 65px;
     border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .author span {
     display: block;
@@ -492,6 +495,21 @@ button#x-btn {
 }
 .send-money-list {
     padding: 0 0 20px 0px;
+}
+
+.balance-section {
+    position: relative;
+}
+
+.balance-section:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 50%;
+    width: 100%;
+    background: #6236FF;
+    z-index: -1;
 }
 /* 
 font-family: 'Inter', sans-serif;
