--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,11 @@ nav {
 .noti-icon {
     position: relative;
 }
+.noti-icon button {
+    border: navajowhite;
+    background: no-repeat;
+    color: #fff;
+}
 .profile-icon img {
     height: 40px;
     border-radius: 10px;
@@ -588,30 +593,21 @@ header.fixed-top {
     border-bottom: 1px solid #ffffff36;
 }
 .header-content{
-    padding: 20px 0;
     display: flex;
-    background: #000;
     align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #ffffff36;
 }
 .header-content .top-left i{
     font-size: 26px;
-    color:#6236FF;
-    padding-left: 15px;
+    color:#ffffff;
 }
 .header-content .top-title h2{
     padding-left: 50px;
     margin-top: 10px;
 }
 .header-content .top-right i{
-    margin-left: 60px;
     font-size: 26px;
     color: #6236FF;
-}
-
-.notifi-box{
-    margin-top: 90px;
 }
 .notifi-item {
     border-bottom: 1px solid #ffffff36;
@@ -683,6 +679,21 @@ header.fixed-top {
 .text .down-arrow .color-3 {
     background: #FFB400;
 }
+
+
+
+/* nitifi motifi */
+.notifi .offcanvas-header{
+    background: #000;
+}
+.notifi .offcanvas {
+    height: 100vh;
+}
+.notifi .offcanvas-body{
+    background-color: #000;
+    padding: 0;
+}
+
 /* 
 font-family: 'Inter', sans-serif;
 font-family: 'The Nautigal', cursive; 
