--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,20 @@ body{
     color: #fff;
     overflow-x: hidden;
 }
+div#ref {
+    background: rgb(255,255,255);
+    background: linear-gradient(0deg, rgba(255,255,255,0.3925945378151261) 15%, rgba(255,255,255,0.5046393557422969) 100%);
+    box-shadow: -1px 4px 27px -4px rgba(255,255,255,0.73);
+    -webkit-box-shadow: -1px 4px 27px -4px rgba(255,255,255,0.73);
+    -moz-box-shadow: -1px 4px 27px -4px rgba(255,255,255,0.73);
+    width: 100%;
+    height: 0px;
+    border-radius: 0 0 50% 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 99999;
+}
 body a{
     text-decoration: none;
     color:#fff;
